<resources>
    <string name="app_name">小额钱包</string>
    <string name="app_name_DQ">小额钱包</string>
    <string name="network_timed">网络连接超时，请重试</string>
    <string name="no_network_timed">暂无网络,请稍后再试</string>
    <string name="name_loan">我的借款</string>
    <string name="name_first_fm">首页</string>
    <string name="name_two_fm">我的借款</string>
    <string name="name_first_fm_credit_num">信用额度（元）</string>
    <string name="name_first_fm_easy">流程简单</string>
    <string name="name_sky_loan">急速放款</string>
    <string name="name_personal_center">个人中心</string>
    <string name="name_loan_credit_card">信用卡贷</string>
    <string name="name_loan_credit_payroll">工薪贷</string>
    <string name="name_loan_credit_taobao">淘宝贷</string>
    <string name="name_loan_credit_Business_owners">企业主贷</string>
    <string name="name_loan_credit_students">学生贷</string>
    <string name="name_Loan_classification">贷款分类引导</string>
    <string name="name_Loan_recommend">贷款推荐</string>
    <string name="name_Loan_recommend_accurately">精确推荐贷款</string>
    <string name="name_loan_credit_report">征信报告</string>
    <string name="name_loan_personal_credit">个人信用查询</string>
    <string name="name_loan_batch">换一批</string>
    <string name="name_loan_hot_sky_loan">热门极速贷款</string>
    <string name="name_loan_praise_recommend">好评推荐</string>
    <string name="name_loan_personal_logn">点击登录</string>
    <string name="name_loan_my">我的借款</string>
    <string name="name_loan_my_details">查看借款详情</string>
    <string name="name_loan_my_ic_my_package">我的卡包</string>
    <string name="name_loan_my_ic_my_package_use">一张卡可用</string>
    <string name="name_loan_personal_data">个人资料</string>
    <string name="name_loan_personal_inviting_friends">邀请好友</string>
    <string name="name_loan_personal_help_center">帮助中心</string>
    <string name="name_loan_personal_feedback">意见反馈</string>
    <string name="integral_shop_title_name">个人中心</string>
    <string name="name_loan_personal_setup">设置</string>
    <string name="name_loan_personal_data_phone">手机号码</string>
    <string name="name_loan_personal_data_name">姓名</string>
    <string name="name_loan_personal_data_id">身份证号码</string>
    <string name="name_loan_personal_data_credit">个人资信</string>
    <string name="name_loan_personal_data_enterprise">企业经营情况</string>
    <string name="name_loan_personal_data_family">家庭及居住情况</string>
    <string name="name_loan_personal_data_other">其他联系人</string>
    <string name="name_loan_personal_data_house_property">房产</string>
    <string name="name_loan_personal_data_car_production">车产</string>
    <string name="name_loan_personal_data_operator">授权</string>
    <string name="name_loan_personal_data_online_shopping">网购信用</string>
    <string name="name_loan_personal_data_certificates">证件上传</string>
    <string name="name_loan_personal_data_bank_card">绑定银行卡</string>
    <string name="name_loan_personal_data_no_complete">未完成</string>
    <string name="name_loan_personal_data_complete">完成</string>
    <string name="name_loan_credit_degree_education">文化程度</string>
    <string name="name_loan_credit_please_select">请选择</string>
    <string name="name_loan_credit_no_cards">有无信用卡</string>
    <string name="name_loan_credit_no_cards_record">两年内信用记录</string>
    <string name="name_loan_credit_liabilities">负债情况</string>
    <string name="name_loan_credit_no_loan">有无成功贷款记录</string>
    <string name="name_loan_credit_no_taobao">是否有实名淘宝账号</string>
    <string name="name_loan_credit_purpose">贷款用途</string>
    <string name="name_loan_enterprise_identity">您在企业的身份</string>
    <string name="name_loan_enterprise_shares">您在企业的股份</string>
    <string name="name_loan_enterprise_location">企业世纪经营所在地</string>
    <string name="name_loan_enterprise_type">经营企业类型</string>
    <string name="name_loan_enterprise_industry">经营公司所属行业</string>
    <string name="name_loan_enterprise_time">营业执照时间</string>
    <string name="name_loan_enterprise_life">企业经营年限</string>
    <string name="name_loan_enterprise_private_water">每月对私流水(万元)</string>
    <string name="name_loan_enterprise_public_water">每月对公流水(万元)</string>
    <string name="name_loan_family_marriage">婚姻状况</string>
    <string name="name_loan_family_city">所在城市</string>
    <string name="name_loan_family_address">居住详情地址</string>
    <string name="name_loan_family_household_register">户籍所在地</string>
    <string name="name_loan_bank_savings_card">储蓄卡</string>
    <string name="name_loan_bank_no_verification">未验证</string>
    <string name="name_loan_other_import">快捷导入</string>
    <string name="name_loan_other_relatives">亲属/配偶姓名</string>
    <string name="name_loan_other_contacts">紧急联系人</string>
    <string name="name_loan_house_estate">名下房产</string>
    <string name="name_loan_house_location">房产所在地</string>
    <string name="name_loan_house_type">房产类型</string>
    <string name="name_loan_house_market_price">房产当前市价(万元)</string>
    <string name="name_loan_house_mortgage">目前该放是否存在按揭</string>
    <string name="name_loan_house_no_mortgage">目前该放是否抵押</string>
    <string name="name_loan_car_estate">名下车产</string>
    <string name="name_loan_car_new_car">新车市价(万元)</string>
    <string name="name_loan_car_life">使用年限</string>
    <string name="name_loan_car_mortgage">目前该车是否存在按揭</string>
    <string name="name_loan_car_no_mortgage">目前该车是否存抵押</string>
    <string name="name_loan_operator_no_authorization">待认证</string>
    <string name="name_loan_operator_authorization">已认证</string>
    <string name="name_loan_set_up_about">关于我们</string>
    <string name="name_loan_set_up_password">修改密码</string>
    <string name="name_loan_set_up_sign_upde">检测版本</string>
    <string name="name_loan_set_up_sign_out">安全退出</string>
    <string name="name_loan_set_up_about_text">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;小额钱包成立于2016年7月,公司位于北京.小额钱包通过移动互联网和大数据应用技术,为用户提供线上纯信用贷款服务的平台.小额钱包全程线上操作、申请、审批,手续渐变快捷,用户应急周转和线上消费的备用钱包.截止目前,小额钱包APP累计注册用户百万人,入驻多家主流正规贷款机构,包括消费金融公司、小贷公司、汽车金融公司、互联网金融公司等.</string>
    <string name="name_loan_set_up_password_phone">输入手机号</string>
    <string name="name_loan_set_up_password_phone11">请输入11位手机号码</string>
    <string name="name_loan_set_up_password_code">验证码</string>
    <string name="name_loan_set_up_password_code11">请输入验证码</string>
    <string name="name_loan_set_up_password_obtain_code">获取验证码</string>
    <string name="name_loan_set_up_password_password">密码</string>
    <string name="name_loan_set_up_password_password11">请输入6位以上新密码</string>
    <string name="name_loan_set_up_password_confirm">确认密码</string>
    <string name="name_loan_set_up_password_confirm11">请再次输入密码</string>
    <string name="name_loan_you">有</string>
    <string name="name_loan_wu">无</string>
    <string name="name_loan_cancel">取消</string>
    <string name="name_loan_personal_data_certifcates_reminder">* 温馨提示：请填写真实有效信息以便通过认证</string>
    <string name="name_loan_personal_data_certifcates_positive">第一步：请拍摄身份证正面照</string>
    <string name="name_loan_personal_data_certifcates_camera_text">身份证完整,身份证号清晰</string>
    <string name="name_loan_personal_data_certifcates_other_side">第二步：请拍摄身份证反面照</string>
    <string name="name_loan_personal_data_certifcates_face_verification">点击开始验证</string>
    <string name="name_loan_personal_data_certifcates_face_v_success">验证成功</string>
    <string name="name_loan_personal_data_preservation">保存</string>
    <string name="name_loan_personal_data_upload_front_id">身份证正面照</string>
    <string name="name_loan_personal_data_upload_front_hold_id">手持身份证照片</string>
    <string name="name_loan_personal_data_upload_house">房产证</string>
    <string name="name_loan_personal_data_upload_vehicle">机动车驾驶证</string>
    <string name="name_loan_personal_camera">拍照</string>
    <string name="name_loan_personal_album">相册中选择</string>
    <string name="read_photo_error">获取图片失败</string>
    <string name="parse_photo_error">解析图片失败</string>
    <string name="name_loan_logo_register">注册</string>
    <string name="name_loan_logo_phone">输入手机号</string>
    <string name="name_loan_logo_code">输入验证码</string>
    <string name="name_loan_logo_logo">立即登录</string>
    <string name="name_loan_logo_account_number">账号密码登录</string>
    <string name="name_loan_logo_password">请输入密码</string>
    <string name="name_loan_logo_code_logo">验证码快捷登录</string>
    <string name="name_loan_logo_no_password">忘记密码</string>
    <string name="name_loan_logo_agreement">注册即表示同意《小额钱包注册协议》</string>
    <string name="name_loan_product_interest_rat">日利率</string>
    <string name="name_loan_details_yuan">元</string>
    <string name="name_loan_details_month">月</string>
    <string name="name_loan_details_day">天</string>
    <string name="name_loan_details_resources_rat">参考日利率</string>
    <string name="name_loan_details_repayment">每日还款(元)</string>
    <string name="name_loan_details_repayment_yue">每月还款(元)</string>
    <string name="name_loan_details_loan_time">放款最快时间</string>
    <string name="name_loan_details_borrow_possible">按日计息,随借随还</string>
    <string name="name_loan_details_basic_information">基础信息认证</string>
    <string name="name_loan_details_information">认证材料</string>
    <string name="name_loan_details_product_details">产品详情</string>
    <string name="name_loan_details_evaluate">用户评价</string>
    <string name="name_loan_details_state">用户状态</string>
    <string name="name_loan_details_phone_operator">手机运营商</string>
    <string name="name_loan_details_esame_credit">芝麻信用</string>
    <string name="name_loan_details_id">身份证</string>
    <string name="name_loan_details_other">其他认证信息</string>
    <string name="name_loan_details">贷款详情</string>
    <string name="name_loan_details_supplement">补充资料</string>
    <string name="name_loan_details_basic_txt">该信息将作为您的真实凭证,请确保真实</string>
    <string name="name_loan_details_basic_my_name">本人姓名</string>
    <string name="name_loan_details_basic_please_in">请填写姓名</string>
    <string name="name_loan_details_basic_id">本人身份证号</string>
    <string name="name_loan_details_basic_number">请输入身份证号码</string>
    <string name="name_loan_details_basic_application">申请金额</string>
    <string name="name_loan_details_basic_loan_application">贷款申请期限</string>
    <string name="name_loan_details_basic_loan_highest">可接受最高月还款额度(元)</string>
    <string name="name_loan_details_basic_content">请输入内容</string>
    <string name="name_loan_details_basic_education_level">教育程度</string>
    <string name="name_loan_details_basic_security">现单位是否缴纳社保</string>
    <string name="name_loan_details_basic_cat">车辆情况</string>
    <string name="name_loan_details_basic_typ">职业类型</string>
    <string name="name_loan_details_basic_income">月工资收入(元)</string>
    <string name="name_loan_details_basic_agree">我已阅读并同意</string>
    <string name="name_loan_details_basic_loan">贷款知情书</string>
    <string name="name_loan_details_basic_life">现单位工作年限</string>
    <string name="name_loan_basic_information">基本信息认证</string>
    <string name="name_loan_basic_identity">身份认证</string>
    <string name="name_loan_basic_submit">提交</string>
    <string name="channel_name">10000</string>
    <string name="name_other_information_text">恭喜,您已经满足贷款需求.您必须完成补充信息,才能最终放款</string>
    <string name="name_other_information_personal_mailbox">个人邮箱</string>
    <string name="name_other_information_mailbox">请填写邮箱</string>
    <string name="name_other_information_spouse">配偶</string>
    <string name="share_weichat">微信</string>
    <string name="share_weichatfriend">朋友圈</string>
    <string name="share_qqroom">QQ空间</string>
    <string name="share_qq">QQ</string>
    <string name="operator_text_phone">仅支持本人实名认证的手机号</string>
    <string name="operator_service_password">服务密码</string>
    <string name="operator_phone_service_password">请输入电话服务密码</string>
    <string name="operator_password_locking">请谨慎输入,多次输入错误会导致账号锁定</string>
    <string name="operator_no_password">忘记密码?</string>
    <string name="operator_clause">《授权服务条款》</string>
    <string name="operator_agree">同意</string>
    <string name="operator_text">正在登入....\n完成登入过程大约需要 30s\n登入过程中需要输入短信验证码,请勿关闭页面</string>
    <string name="operator_text_result">登入完成,正在同步…\n离开页面不会影响授权结果</string>
</resources>