<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/tab_group"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/common_100dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_35dp"
            android:paddingRight="@dimen/common_35dp"
            android:paddingTop="@dimen/common_2dp" >

            <RadioButton
                android:id="@+id/tab_rb_1"
                style="@style/share_rb_style"
                android:drawableTop="@mipmap/share_weichat"
                android:text="@string/share_weichat" />

            <RadioButton
                android:id="@+id/tab_rb_2"
                style="@style/share_rb_style"
                android:drawableTop="@mipmap/share_weichatfriend"
                android:text="@string/share_weichatfriend" />

            <RadioButton
                android:id="@+id/tab_rb_3"
                style="@style/share_rb_style"
                android:drawableTop="@mipmap/share_qqroom"
                android:text="@string/share_qqroom" />

            <RadioButton
                android:id="@+id/tab_rb_4"
                style="@style/share_rb_style"
                android:drawableTop="@mipmap/share_qq"
                android:text="@string/share_qq" />
        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/common_10dp"
        android:src="@color/common_grey_color" />

    <cn.jishiyu11.xjsjd.control.MyButton
        android:id="@+id/my_pop_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_40dp"
        android:layout_margin="@dimen/common_10dp"
        android:background="@drawable/button_white_selector"
        android:text="取消"
        android:textColor="@color/black"
        android:textSize="@dimen/common_14dp" />

</LinearLayout>