<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        layout="@layout/tab_activity_fra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/common_10dp">


        <cn.jishiyu11.xjsjd.control.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_10dp"
            android:text="@string/name_loan_set_up_password_phone"
            android:textColor="@color/common_loan_view_text"
            android:textSize="@dimen/common_16dp" />

        <cn.jishiyu11.xjsjd.control.MyEdittextView
            android:id="@+id/password_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_10dp"
            android:layout_marginRight="@dimen/common_10dp"
            android:background="@color/white"
            android:digits="1234567890"
            android:hint="@string/name_loan_set_up_password_phone11"
            android:inputType="phone|number"
            android:maxLength="12"
            android:padding="@dimen/common_5dp"
            android:paddingLeft="@dimen/common_50dp"
            android:textColor="@color/common_loan_personal"
            android:textColorHint="@color/common_gray"
            android:textSize="@dimen/common_14dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/common_20dp"
        android:layout_marginRight="@dimen/common_20dp"
        android:background="@color/common_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/common_5dp">


        <cn.jishiyu11.xjsjd.control.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_15dp"
            android:text="@string/name_loan_set_up_password_code"
            android:textColor="@color/common_loan_view_text"
            android:textSize="@dimen/common_16dp" />

        <cn.jishiyu11.xjsjd.control.MyEdittextView
            android:id="@+id/password_edittext_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_45dp"
            android:layout_marginRight="@dimen/common_10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:digits="1234567890"
            android:hint="@string/name_loan_set_up_password_code11"
            android:inputType="number|phone"
            android:maxLength="6"
            android:padding="@dimen/common_5dp"
            android:textColor="@color/common_loan_personal"
            android:textColorHint="@color/common_gray"
            android:textSize="@dimen/common_14dp" />

        <cn.jishiyu11.xjsjd.control.MyButton
            android:id="@+id/password_button_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_set_up_button"
            android:padding="@dimen/common_10dp"
            android:text="@string/name_loan_set_up_password_obtain_code"
            android:textColor="@color/white"
            android:textSize="@dimen/common_14dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/common_20dp"
        android:layout_marginRight="@dimen/common_20dp"
        android:background="@color/common_gray" />

    <LinearLayout
        android:id="@+id/password_edittext_pass_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/common_10dp">


        <cn.jishiyu11.xjsjd.control.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_10dp"
            android:text="@string/name_loan_set_up_password_password"
            android:textColor="@color/common_loan_view_text"
            android:textSize="@dimen/common_16dp" />

        <cn.jishiyu11.xjsjd.control.MyEdittextView
            android:id="@+id/password_edittext_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_60dp"
            android:layout_marginRight="@dimen/common_10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/name_loan_set_up_password_password11"
            android:inputType="textPassword"
            android:padding="@dimen/common_5dp"
            android:textColor="@color/common_loan_personal"
            android:textColorHint="@color/common_gray"
            android:textSize="@dimen/common_14dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/common_20dp"
        android:layout_marginRight="@dimen/common_20dp"
        android:background="@color/common_gray" />

    <LinearLayout
        android:id="@+id/password_edittext_pass_confirm_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/common_10dp">


        <cn.jishiyu11.xjsjd.control.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_10dp"
            android:text="@string/name_loan_set_up_password_confirm"
            android:textColor="@color/common_loan_view_text"
            android:textSize="@dimen/common_16dp" />

        <cn.jishiyu11.xjsjd.control.MyEdittextView
            android:id="@+id/password_edittext_pass_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_25dp"
            android:layout_marginRight="@dimen/common_10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/name_loan_set_up_password_confirm11"
            android:inputType="textPassword"
            android:padding="@dimen/common_5dp"
            android:textColor="@color/common_loan_personal"
            android:textColorHint="@color/common_gray"
            android:textSize="@dimen/common_14dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/common_20dp"
        android:layout_marginRight="@dimen/common_20dp"
        android:background="@color/common_gray" />


    <cn.jishiyu11.xjsjd.control.MyButton
        android:id="@+id/password_button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_10dp"
        android:layout_marginRight="@dimen/common_10dp"
        android:layout_marginTop="@dimen/common_30dp"
        android:background="@mipmap/ic_set_up_confirm_button"
        android:text="@string/name_loan_personal_data_complete"
        android:textColor="@color/white"
        android:textSize="@dimen/common_14dp" />

    <cn.jishiyu11.xjsjd.control.MyTextView
        android:id="@+id/agreement_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/common_10dp"
        android:text="@string/name_loan_logo_agreement"
        android:textColor="@color/common_brown_text"
        android:textSize="@dimen/common_14dp" />

</LinearLayout>
